deploy/k8s/Todo-NS.yml
kind: Namespace
apiVersion: v1
metadata:
  name: todoapp
  labels:
    name: todoapp
