deploy/k8s/BoardApi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boardapi
  template:
    metadata:
      labels:
        app: boardapi
    spec:
      containers:
        - name: boardapi
          image: boardapi
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: boardapi
spec:
  type: ClusterIP
  ports:
    - name: boardapi
      port: 3000
      targetPort: 3000
  #      nodePort: 31003 # Debug
  #      protocol: TCP
  selector:
    app: boardapi
