deploy/k8s/BoardDB-PVC.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boarddb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boarddb
  template:
    metadata:
      labels:
        app: boarddb
    spec:
      containers:
        - name: boarddb
          image: postgres:alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql"
              name: boarddb
            - mountPath: "/var/lib/postgresql/data"
              name: boarddb-data
      volumes:
        - name: boarddb
          persistentVolumeClaim:
            claimName: boarddb-pvc
        - name: boarddb-data
          persistentVolumeClaim:
            claimName: boarddb-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: boarddb
spec:
  type: ClusterIP
  ports:
    - name: boarddb
      port: 5432
      targetPort: 5432
  #      nodePort: 31432 # Debug
  #      protocol: TCP
  selector:
    app: boarddb
