deploy/k8s/TodoApi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapi
  template:
    metadata:
      labels:
        app: todoapi
    spec:
      containers:
        - name: todoapi
          image: todoapi
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: todoapi
spec:
  type: ClusterIP
  ports:
    - name: todoapi
      port: 5000
      targetPort: 5000
  #      nodePort: 31002 # Debug
  #      protocol: TCP
  selector:
    app: todoapi
