deploy/k8s/TodoDB-PVC.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tododb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tododb
  template:
    metadata:
      labels:
        app: tododb
    spec:
      containers:
        - name: tododb
          image: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: tododb-data
      volumes:
        - name: tododb-data
          persistentVolumeClaim:
            claimName: tododb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tododb
spec:
  type: ClusterIP
  ports:
    - name: tododb
      port: 3306
      targetPort: 3306
  #      nodePort: 31306 # Debug
  #      protocol: TCP
  selector:
    app: tododb
