deploy/k8s/Tododb-Console.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tododb-console-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tododb-console
  template:
    metadata:
      labels:
        app: tododb-console
    spec:
      containers:
        - name: tododb-console
          image: adminer
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tododb-console
spec:
  type: NodePort
  ports:
    - name: tododb-console
      port: 8080
      targetPort: 8080
      nodePort: 31880
      protocol: TCP
  selector:
    app: tododb-console
