deploy/k8s/Todo-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: todoendpoint
                port:
                  number: 80
            path: /
            pathType: Prefix
